update: api resource
